Fri May 24 15:09:25 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0542.feature : Add scenario to reproduce abend
	  problem of parser.

	* lib/adlint/cc1/parser.y : Fix bad state management of the identifier
	  translation.

Fri May 24 13:47:47 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0491.feature : Add scenario to reproduce abend
	  problem of parser.

	* lib/adlint/cc1/parser.y : Fix bad state management of the identifier
	  translation.

Fri May 24 12:32:54 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0491.feature : Add scenario to reproduce abend
	  problem of parsing the same name in different namespaces.

	* lib/adlint/cc1/parser.y : Fix incomplete identifier to typedef-name
	  translation.

Thu May 23 19:10:38 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0492.feature : Add scenario to reproduce abend
	  problem of parsing the same name in different namespaces.

	* lib/adlint/cc1/parser.y : Fix incomplete identifier to typedef-name
	  translation.

	* lib/adlint/cc1/lexer.rb : Add note about namespaces of identifiers.

Wed May 22 13:12:48 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0786.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/exam/c_builtin/cc1_check.rb : Fix W0786 code check in
	  order not to warn when a typedefed type which is same as signed or
	  unsigned int is specified as a base of the bit-field.

Tue May 21 19:34:10 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/parser.y : Fix abend problem in parsing unnamed
	  bit-field declaration.

Sat May 18 15:25:51 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W1047.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/cc1/syntax.rb : Fix bad expression-constancy check in
	  order to treat an address-expression as a constant-expression.
